--- a/.github/workflows/stack-down.yml
+++ b/.github/workflows/stack-down.yml
@@ -10,6 +10,9 @@ on:
       context:
         required: false
         type: string
+      stackName:
+        required: false
+        type: string
 
     secrets:
       awsAccountId:
