--- a/.github/workflows/stack-down.yml
+++ b/.github/workflows/stack-down.yml
@@ -25,7 +25,7 @@ on:
         required: true
 
 jobs:
-  down:
+  clean_up:
     environment: ${{ inputs.environment }}
     runs-on: ubuntu-latest
 
