--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -95,6 +95,8 @@ jobs:
 
   post_integration:
     needs: [setup, build, integration]
+    if: >-
+      always()
     uses: kevjallen/static-site/.github/workflows/stack-down.yml@master
     with: 
       environment: Integration
