--- a/.github/workflows/stack-down.yml
+++ b/.github/workflows/stack-down.yml
@@ -10,9 +10,6 @@ on:
       context:
         required: false
         type: string
-      stackName:
-        required: false
-        type: string
 
     secrets:
       awsAccountId:
@@ -48,7 +45,7 @@ jobs:
       id: cdk_context
       run: |
         CDK_CONTEXT_ARGS="$(_internals/shell-functions/context-args-from.sh \
-          <(echo "{\"stackName\":\"${{ inputs.stackName }}\"}") ${{ inputs.context }})"
+          ${{ inputs.context }})"
         echo "::set-output name=cdk_context_args::$CDK_CONTEXT_ARGS"
 
     - name: Destroy environment
