--- a/.github/workflows/stack-up.yml
+++ b/.github/workflows/stack-up.yml
@@ -81,7 +81,7 @@ jobs:
       run: |
         TEMPLATE=$(_internals/shell-functions/npm-run-cdk.sh 'synth' \
           '${{ secrets.awsAccountId }}' '${{ secrets.awsRegion }}' \
-          ${{ steps.cdk_context.outputs.cdk_context_args }}
+          ${{ steps.cdk_context.outputs.cdk_context_args }} \
         )
         echo "::set-output name=template::$(echo "$TEMPLATE")"
 
