--- a/.github/workflows/stack-up.yml
+++ b/.github/workflows/stack-up.yml
@@ -28,7 +28,7 @@ jobs:
   deploy:
     environment: ${{ inputs.environment }}
     runs-on: ubuntu-latest
-
+    
     steps:
     - name: Checkout
       uses: actions/checkout@v2
@@ -95,6 +95,7 @@ jobs:
           ${{ steps.cdk_context.outputs.cdk_context_args }}
 
     - name: Run E2E tests
+      env:
+        TEMPLATE: ${{ steps.cdk_synth.outputs.template }} 
       run: |
-        _internals/shell-functions/run-e2e-tests-on.sh \
-          "${{ steps.cdk_synth.outputs.template }}"
+        _internals/shell-functions/run-e2e-tests-on.sh "$TEMPLATE"
