--- a/.github/workflows/stack-up.yml
+++ b/.github/workflows/stack-up.yml
@@ -8,10 +8,10 @@ on:
         required: true
         type: string
       version:
-        required: false
         type: string
-      context:
-        required: false
+      contextFiles:
+        type: string
+      cdkArguments:
         type: string
 
     secrets:
@@ -70,9 +70,10 @@ jobs:
           "$GITHUB_REPOSITORY" "$VERSION" "$ARTIFACT_BASENAME"
 
     - name: Read CDK context
+      if: ${{ inputs.contextFiles }}
       id: cdk_context
       env:
-        CONTEXT_FILES: ${{ inputs.context }}
+        CONTEXT_FILES: ${{ inputs.contextFiles }}
       run: |
         CDK_CONTEXT_ARGS=$(_internals/shell-functions/context-args-from.sh \
           $CONTEXT_FILES)
@@ -85,11 +86,11 @@ jobs:
         AWS_SECRET_ACCESS_KEY: ${{ secrets.awsSecretAccessKey }}
         AWS_ACCOUNT_ID: ${{ secrets.awsAccountId }}
         AWS_REGION: ${{ secrets.awsRegion }}
-        CDK_CONTEXT_ARGS: ${{ steps.cdk_context.outputs.cdk_context_args }} 
+        CDK_CONTEXT_ARGS: ${{ steps.cdk_context.outputs.cdk_context_args }}
+        CDK_USER_ARGS: ${{ inputs.cdkArguments }} 
       run: |
         TEMPLATE=$(_internals/shell-functions/npm-run-cdk.sh 'synth' \
-          "$AWS_ACCOUNT_ID" "$AWS_REGION" "$CDK_CONTEXT_ARGS"
-        )
+          "$AWS_ACCOUNT_ID" "$AWS_REGION" "$CDK_CONTEXT_ARGS" "$CDK_USER_ARGS")
         echo "::set-output name=template::$(echo "$TEMPLATE" | jq -c)"
 
     - name: Deploy environment
@@ -99,12 +100,13 @@ jobs:
         AWS_ACCOUNT_ID: ${{ secrets.awsAccountId }}
         AWS_REGION: ${{ secrets.awsRegion }}
         CDK_CONTEXT_ARGS: ${{ steps.cdk_context.outputs.cdk_context_args }} 
+        CDK_USER_ARGS: ${{ inputs.cdkArguments }}
       run: |
         _internals/shell-functions/npm-run-cdk.sh 'deploy' \
-          "$AWS_ACCOUNT_ID" "$AWS_REGION" "$CDK_CONTEXT_ARGS"
+          "$AWS_ACCOUNT_ID" "$AWS_REGION" "$CDK_CONTEXT_ARGS" "$CDK_USER_ARGS"
 
     - name: Run E2E tests
       env:
-        TEMPLATE: ${{ steps.cdk_synth.outputs.template }} 
+        TEMPLATE: ${{ steps.cdk_synth.outputs.template }}
       run: |
-        _internals/shell-functions/run-e2e-tests-on.sh "$TEMPLATE"
+        _internals/shell-functions/run-e2e-tests-with.sh "$TEMPLATE"
