feat: refactored quite a bit (#7)

--- a/.github/workflows/stack-down.yml
+++ b/.github/workflows/stack-down.yml
@@ -7,11 +7,9 @@ on:
       environment:
         required: true
         type: string
-      context:
-        required: false
+      contextFiles:
         type: string
-      stackName:
-        required: false
+      cdkArguments:
         type: string
 
     secrets:
@@ -46,16 +44,22 @@ jobs:
 
     - name: Read CDK context
       id: cdk_context
+      if: ${{ inputs.contextFiles }}
+      env:
+        CONTEXT_FILES: ${{ inputs.contextFiles }}
       run: |
-        CDK_CONTEXT_ARGS="$(_internals/shell-functions/context-args-from.sh \
-          <(echo "{\"stackName\":\"${{ inputs.stackName }}\"}") ${{ inputs.context }})"
+        CDK_CONTEXT_ARGS=$(_internals/shell-functions/context-args-from.sh \
+          $CONTEXT_FILES)
         echo "::set-output name=cdk_context_args::$CDK_CONTEXT_ARGS"
 
     - name: Destroy environment
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.awsAccessKeyId }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.awsSecretAccessKey }}
+        AWS_ACCOUNT_ID: ${{ secrets.awsAccountId }}
+        AWS_REGION: ${{ secrets.awsRegion }}
+        CDK_CONTEXT_ARGS: ${{ steps.cdk_context.outputs.cdk_context_args }}
+        CDK_USER_ARGS: ${{ inputs.cdkArguments }}
       run: |
         _internals/shell-functions/npm-run-cdk.sh 'destroy' \
-          '${{ secrets.awsAccountId }}' '${{ secrets.awsRegion }}' \
-          '-f' ${{ steps.cdk_context.outputs.cdk_context_args }}
+          "$AWS_ACCOUNT_ID" "$AWS_REGION" $CDK_CONTEXT_ARGS $CDK_USER_ARGS
