--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,6 @@ on:
   workflow_dispatch:
     inputs:
       version:
-        required: false
         type: string
 
 jobs:
@@ -43,8 +42,8 @@ jobs:
       !needs.setup.outputs.version
     runs-on: ubuntu-latest
     outputs:
-      artifactBaseName: ${{ steps.artifact_path.outputs.artifact_basename }}
-      artifactDirName: ${{ steps.artifact_path.outputs.artifact_dirname }}
+      artifactBaseName: ${{ steps.defaults.outputs.artifact_basename }}
+      artifactDirName: ${{ steps.defaults.outputs.artifact_dirname }}
 
     steps:
     - name: Checkout
@@ -58,17 +57,17 @@ jobs:
         _internals/shell-functions/create-artifact.sh
 
     - name: Get artifact defaults
-      id: artifact_path
+      id: defaults
       run: |
         source _internals/defaults.sh
-        echo "::set-output name=artifact_basename::$(basename "$ARTIFACT_PATH" .zip)"
+        echo "::set-output name=artifact_name::$(basename "$ARTIFACT_PATH" .zip)"
         echo "::set-output name=artifact_dirname::$(dirname "$ARTIFACT_PATH")"
 
     - name: Upload release candidate
       uses: actions/upload-artifact@v2
       with:
-        name: ${{ steps.artifact_path.outputs.artifact_basename }}
-        path: ${{ steps.artifact_path.outputs.artifact_dirname }}
+        name: ${{ steps.defaults.outputs.artifact_name }}
+        path: ${{ steps.defaults.outputs.artifact_dirname }}
 
   integration:
     needs: [setup, build]
@@ -79,14 +78,12 @@ jobs:
     uses: ./.github/workflows/stack-up.yml
     with:
       environment: Integration
-      context: >-
+      contextFiles: >-
         _internals/site-contexts/_common.json
         _internals/site-contexts/env-integration.json
-      stackName: int-${{ github.sha }}
-      # site domain is made accessible to caller with ${SITE_E2E_TARGET_DOMAIN}
-      testScript: |
-        _internals/shell-functions/run-e2e-tests-on.sh "${SITE_E2E_TARGET_DOMAIN}"
-
+      cdkArguments: >-
+        -c stackName=StaticSite-Integration-${{ github.sha }}
+        -c subdomain=${{ github.sha }}
     secrets:
       awsAccountId: ${{ secrets.AWS_ACCOUNT_ID }}
       awsAccessKeyId: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -100,10 +97,12 @@ jobs:
     uses: ./.github/workflows/stack-down.yml
     with: 
       environment: Integration
-      context: >-
+      contextFiles: >-
         _internals/site-contexts/_common.json
         _internals/site-contexts/env-integration.json
-      stackName: int-${{ github.sha }}
+      cdkArguments: >-
+        -c stackName=StaticSite-Integration-${{ github.sha }}
+        -c subdomain=${{ github.sha }}
     secrets:
       awsAccountId: ${{ secrets.AWS_ACCOUNT_ID }}
       awsAccessKeyId: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -157,7 +156,7 @@ jobs:
           needs.release.outputs.version
         }}
       environment: Preview
-      context: >-
+      contextFiles: >-
         _internals/site-contexts/_common.json
         _internals/site-contexts/env-preview.json
     secrets:
@@ -183,7 +182,7 @@ jobs:
           needs.release.outputs.version
         }}
       environment: Production
-      context: >-
+      contextFiles: >-
         _internals/site-contexts/_common.json
         _internals/site-contexts/env-production.json
     secrets:
