--- a/_internals/aws-stack/package.json
+++ b/_internals/aws-stack/package.json
@@ -6,6 +6,7 @@
   },
   "scripts": {
     "build": "tsc",
+    "lint": "eslint lib/**/*.ts bin/**/*.ts",
     "watch": "tsc -w",
     "test": "jest",
     "cdk": "cdk"
@@ -13,7 +14,15 @@
   "devDependencies": {
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "@typescript-eslint/parser": "^5.11.0",
     "aws-cdk": "2.10.0",
+    "eslint": "^8.9.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-cdk": "^1.7.0",
+    "eslint-plugin-import": "^2.25.4",
     "jest": "^26.4.2",
     "ts-jest": "^26.2.0",
     "ts-node": "^9.0.0",
