--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -65,7 +65,7 @@ jobs:
         name: ${{ steps.artifact.outputs.artifact_name }}
         path: ${{ steps.artifact.outputs.publish_folder }}
 
-  inspect_stack:
+  stack:
     needs: [setup]
     if: >-
       !failure() &&
@@ -74,7 +74,7 @@ jobs:
     uses: ./.github/workflows/stack-inspect.yml
 
   integration:
-    needs: [setup, build, inspect_stack]
+    needs: [setup, build, stack]
     if: >-
       !failure() &&
       !github.event.inputs.version &&
@@ -95,7 +95,7 @@ jobs:
       awsRegion: ${{ secrets.AWS_DEFAULT_REGION }}   
 
   post_integration:
-    needs: [setup, build, inspect_stack, integration]
+    needs: [setup, build, stack, integration]
     if: >-
       always()
     uses: ./.github/workflows/stack-down.yml
@@ -114,7 +114,7 @@ jobs:
       awsRegion: ${{ secrets.AWS_DEFAULT_REGION }}          
 
   release:
-    needs: [setup, build, inspect_stack, integration]
+    needs: [setup, build, stack, integration]
     if: >-
       !failure() &&
       !github.event.inputs.version &&
@@ -144,14 +144,19 @@ jobs:
         echo "::set-output name=version::$VERSION"
 
   preview:
-    needs: [setup, build, inspect_stack, integration, release]
+    needs: [setup, build, stack, integration, release]
     if: >-
       !failure() && (
         github.event.inputs.version ||
         needs.setup.outputs.version ||
         needs.release.outputs.version
       )
-    uses: ./.github/workflows/stack-up.yml
+    uses: >- 
+      ./.github/workflows/stack-up.yml@${{ 
+        github.event.inputs.version ||
+        needs.setup.outputs.version ||
+        needs.release.outputs.version 
+      }}
     with:
       version: >-
         ${{
@@ -170,14 +175,19 @@ jobs:
       awsRegion: ${{ secrets.AWS_DEFAULT_REGION }}
 
   production:
-    needs: [setup, build, inspect_stack, integration, release, preview]
+    needs: [setup, build, stack, integration, release, preview]
     if: >-
       !failure() && (
         github.event.inputs.version ||
         needs.setup.outputs.version ||
         needs.release.outputs.version
       )
-    uses: ./.github/workflows/stack-up.yml
+    uses: >- 
+      ./.github/workflows/stack-up.yml@${{ 
+        github.event.inputs.version ||
+        needs.setup.outputs.version ||
+        needs.release.outputs.version 
+      }}
     with:
       version: >-
         ${{
