--- a/.github/workflows/stack-up.yml
+++ b/.github/workflows/stack-up.yml
@@ -32,6 +32,7 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
+      ref: ${{ inputs.version }}
 
     - name: Setup asdf
       uses: asdf-vm/actions/setup@v1
