--- a/.github/workflows/stack-up.yml
+++ b/.github/workflows/stack-up.yml
@@ -32,6 +32,8 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
+      with:
+        ref: ${{ inputs.version }}
 
     - name: Setup asdf
       uses: asdf-vm/actions/setup@v1
