--- a/_internals/aws-stack/package.json
+++ b/_internals/aws-stack/package.json
@@ -6,7 +6,7 @@
   },
   "scripts": {
     "build": "tsc",
-    "lint": "eslint lib/**/*.ts bin/**/*.ts",
+    "lint": "eslint bin/**/*.ts lib/**/*.ts test/**/*.ts",
     "watch": "tsc -w",
     "test": "jest",
     "cdk": "cdk"
@@ -23,6 +23,7 @@
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-cdk": "^1.7.0",
     "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jest": "^26.1.0",
     "jest": "^26.6.3",
     "ts-jest": "^26.2.0",
     "ts-node": "^9.0.0",
